--- a/src/app/main-content/main-header/main-header.component.html
+++ b/src/app/main-content/main-header/main-header.component.html
@@ -2,7 +2,7 @@
     <div class="headerMainWrapper">
         <div class="headerContentWrapper">
 
-            <div class="logo"><img src="./img/main_assets/main-logo.svg"></div>
+            <div class="logo"><img src="./img/main-assets/main-logo.svg"></div>
             <div class="searchbar">
 
                 <div class="inputFrame">
@@ -13,18 +13,17 @@
             </div>
 
 
-            <div class="profil">
-                <div>
-                    <div class="profilPicture"></div>
-                    <div>
-                        <button mat-button [matMenuTriggerFor]="profilMenu"><mat-icon>menu</mat-icon></button>
+            <nav class="profil"> 
+                    <div class="name">Frederik Beck</div>
+
+                    <div class="profilPicture"><img src="./img/profil-pic/006.svg">   <div class="statusSymbol"></div> </div>
+                 
+                        <div class="profilButton" mat-button [matMenuTriggerFor]="profilMenu"><mat-icon>keyboard_arrow_down</mat-icon></div>
                         <mat-menu #profilMenu="matMenu">
                             <button mat-menu-item>Profil</button>
                             <button mat-menu-item>Log-Out</button>
                         </mat-menu>
-                    </div>
-                </div>
-            </div>
+            </nav>
 
 
         </div>
