--- a/src/app/main-content/main-header/main-header.component.scss
+++ b/src/app/main-content/main-header/main-header.component.scss
@@ -73,6 +73,8 @@
         width: 100%;
         height: 26px;
         font-size: 24px;
+        font-family: 'Figtree';
+        font-weight: 300;
         border: none;
         &:active, &:focus, &:hover{
             border: none;
@@ -89,6 +91,59 @@
 
 .active{
     border-color: var(--purple-2);
+}
+
+.profil{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: center;
+
+    .name{
+        text-wrap: nowrap;
+        font-size: 32px;
+        font-family: 'Figtree';
+        font-weight: 500;
+        padding-right: 24px;
+    }
+
+    .profilButton{
+        width: 100%;
+        padding: 0px 16px;
+    }
+
+    mat-icon{
+        font-size: 32px;
+        &:hover{
+            color: var(--purple-2);
+            cursor: pointer;
+        }
+    }
+}
+
+.profilPicture{
+    height: 70px;
+    width: 70px;
+    position: relative;
+
+
+    img{
+        border-radius: 50%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
+    }
+
+    .statusSymbol{
+        bottom: -2px;
+        right: -2px;
+        height: 14px;
+        width: 14px;
+        border-radius: 50%;
+        position: absolute;
+        background-color: var(--green);
+        border: 2px solid var(--primary-bg);
+    }
 }
 
 
