--- a/src/app/main-content/main-header/main-header.component.html
+++ b/src/app/main-content/main-header/main-header.component.html
@@ -13,16 +13,19 @@
             </div>
 
 
-            <nav class="profil"> 
-                    <div class="name">Frederik Beck</div>
+            <nav class="profil">
+                <div class="name">Frederik Beck</div>
 
-                    <div class="profilPicture"><img src="./img/profil-pic/006.svg">   <div class="statusSymbol"></div> </div>
-                 
-                        <div class="profilButton" mat-button [matMenuTriggerFor]="profilMenu"><mat-icon>keyboard_arrow_down</mat-icon></div>
-                        <mat-menu #profilMenu="matMenu">
-                            <button mat-menu-item>Profil</button>
-                            <button mat-menu-item>Log-Out</button>
-                        </mat-menu>
+                <div class="profilPicture"><img src="./img/profil-pic/006.svg">
+                    <div class="statusSymbol"></div>
+                </div>
+
+                <div class="profilButton" mat-button [matMenuTriggerFor]="profilMenu">
+                    <mat-icon>keyboard_arrow_down</mat-icon></div>
+                <mat-menu #profilMenu="matMenu">
+                    <button mat-menu-item>Profil</button>
+                    <button mat-menu-item>Log-Out</button>
+                </mat-menu>
             </nav>
 
 
