--- a/src/app/shared/header/main-header.component.scss
+++ b/src/app/shared/header/main-header.component.scss
@@ -13,19 +13,16 @@
 
 .headerContentWrapper{
     width: 100%;
-    display: flex;   
-    justify-content: space-between;
+    @include dFlex($jc: space-between);
+    
 }
 
 .logo{
     @include heightWidth;
     max-width: 243px;
     img{
-        height: 100%;
-        object-fit: contain;
-        object-position: center;
+      @include image();
     }
-
 
     &:hover{
         cursor: pointer;
@@ -46,46 +43,22 @@
     }
 
     .inputFrame{
+        @include dFlex; 
         padding: 0px 24px;
-        width: 100%;
-        @include dFlex;  
-        justify-content: space-between;
+        width: 100%; 
 
 
         mat-icon{
-            width: 32px;
-            height: 70px;
+            @include heightWidth($w: 32px, $h: 70px);
             @include dFlex;  
-            color: var(--btn-gray);
-            font-size: 32px;
-            padding: 0px 12px;
-            position: relative;
-
-            &:hover{
-                cursor: pointer;
-                color: var(--purple-2); 
-                font-size: 36px;
-            }
+            @include matIcon($scale: 110%);    
         }
     }
 
     input{
-        width: 100%;
-        height: 26px;
-        font-size: 24px;
-        font-family: 'Figtree';
-        font-weight: 300;
-        border: none;
-        &:active, &:focus, &:hover{
-            border: none;
-            background-color: none;
-            outline: none;
-        }
-
-        &::placeholder{
-            color: var(--btn-gray);
-        }
-
+        @include heightWidth($h: 26px);
+        @include figtree($fw: 300, $fs: 24px);
+        @include input;
     }
 }
 
@@ -94,16 +67,12 @@
 }
 
 .profil{
-    display: flex;
+    @include dFlex;
     flex-wrap: nowrap;
-    flex-direction: row;
-    align-items: center;
 
     .name{
+        @include figtree($fw: 500, $fs: 24px, $c: var(--text-black));
         text-wrap: nowrap;
-        font-size: 32px;
-        font-family: 'Figtree';
-        font-weight: 500;
         padding-right: 24px;
     }
 
@@ -113,36 +82,22 @@
     }
 
     mat-icon{
-        font-size: 32px;
-        &:hover{
-            color: var(--purple-2);
-            cursor: pointer;
-        }
+        @include matIcon(); 
     }
 }
 
 .profilPicture{
-    height: 70px;
-    width: 70px;
+   @include heightWidth($w: 70px, $h: 70px);
     position: relative;
 
 
     img{
-        border-radius: 50%;
+        @include image($br: 50%);
         height: 100%;
-        object-fit: contain;
-        object-position: center;
     }
 
     .statusSymbol{
-        bottom: -2px;
-        right: -2px;
-        height: 14px;
-        width: 14px;
-        border-radius: 50%;
-        position: absolute;
-        background-color: var(--green);
-        border: 2px solid var(--primary-bg);
+        @include statusSymbol;
     }
 }
 
