--- a/src/app/shared/header/main-header.component.scss
+++ b/src/app/shared/header/main-header.component.scss
@@ -1,5 +1,4 @@
 @import '../../../mixin.scss';
-@import '../../../styles.scss';
 
 .headerComponent{
     @include dFlex;    
@@ -29,76 +28,9 @@
     }
 }
 
-.searchbar{
-    @include dFlex;  
-    background-color: var(--secundary-bg);
-    width: 100%;
-    max-width: 989px;
-    height: 70px;
-    border-radius: 46px;
-    border: 3px solid var(--secundary-bg);
-
-    &:hover{
-        border-color: var(--purple-2);
-    }
-
-    .inputFrame{
-        @include dFlex; 
-        padding: 0px 24px;
-        width: 100%; 
-
-
-        mat-icon{
-            @include heightWidth($w: 32px, $h: 70px);
-            @include dFlex;  
-            @include matIcon($scale: 110%);    
-        }
-    }
-
-    input{
-        @include heightWidth($h: 26px);
-        @include figtree($fw: 300, $fs: 24px);
-        @include input;
-    }
+app-searchbar {
+width: 50%;
 }
 
-.active{
-    border-color: var(--purple-2);
-}
-
-.profil{
-    @include dFlex;
-    flex-wrap: nowrap;
-
-    .name{
-        @include figtree($fw: 500, $fs: 24px, $c: var(--text-black));
-        text-wrap: nowrap;
-        padding-right: 24px;
-    }
-
-    .profilButton{
-        width: 100%;
-        padding: 0px 16px;
-    }
-
-    mat-icon{
-        @include matIcon(); 
-    }
-}
-
-.profilPicture{
-   @include heightWidth($w: 70px, $h: 70px);
-    position: relative;
-
-
-    img{
-        @include image($br: 50%);
-        height: 100%;
-    }
-
-    .statusSymbol{
-        @include statusSymbol;
-    }
-}
 
 
