create devspace adn chat and thread container

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,2 +1,5 @@
-<app-main-header></app-main-header>
-<p>main-content works!</p>
+<div class="main-content">
+    <app-devspace></app-devspace>
+    <app-chat></app-chat>
+    <app-thread></app-thread>
+</div>
