create content container devspace and vhat and thread

--- a/src/app/main-content/chat/chat.component.html
+++ b/src/app/main-content/chat/chat.component.html
@@ -1,3 +1,9 @@
 <section>
-    
+    <app-chat-header></app-chat-header>
+
+    <div class="main-message-container">
+        <p>message</p>
+    </div>
+
+    <app-chat-message-field></app-chat-message-field>
 </section>
