--- a/src/app/main-content/thread/thread.component.html
+++ b/src/app/main-content/thread/thread.component.html
@@ -1,3 +1,5 @@
 <section>
-    
+    <app-thread-header></app-thread-header>
+    <div class="main-message-container"></div>
+    <app-thread-message-field></app-thread-message-field>
 </section>
