create chat header content

--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -1,1 +1,20 @@
-<p>chat-header works!</p>
+<section>
+    <button class="creator-team-btn">
+        <mat-icon>tag</mat-icon>
+        <p>Entwicklerteam</p>
+        <mat-icon>keyboard_arrow_down</mat-icon>
+    </button>
+
+    <div class="add-members-container">
+        <div class="active-members-image-container">
+            <img src="/img/profil-pic/001.svg" alt="">
+            <img style="margin-left: -10px;" src="/img/profil-pic/001.svg" alt="">
+            <img style="margin-left: -10px;" src="/img/profil-pic/001.svg" alt="">
+        </div>
+
+        <p>3</p>
+        <button>
+            <mat-icon class="material-symbols-outlined">person_add</mat-icon>
+        </button>
+    </div>
+</section>
