--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -4,7 +4,7 @@ section {
     @include heightWidth($w: 100%, $h: 100%);
     @include dFlex($jc: space-between);
     flex-direction: column;
-    background-color: rgba(0, 0, 255, 0.164);
+    background-color: var(--secundary-bg);
     border-radius: 20px;
 }
 
@@ -15,7 +15,6 @@ section {
 
 app-chat-header {
     @include heightWidth($h: 10%);
-    background-color: rgba(255, 0, 0, 0.205);
     border-radius: 20px 20px 0 0;
 }
 
