create chat message content

--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -48,6 +48,7 @@ section {
         border: none;
         background-color: var(--secundary-bg);
         border-radius: 100%;
+        cursor: pointer;
 
         &:hover {
             background-color: var(--primary-bg);
