--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
         --purple-3: #535AF1;
         --btn-gray: #686868;
         --green: #92C83E;
+        --border-light-purple: #ADB0D9;
 }
 
 :root.dark-theme {
@@ -24,6 +25,7 @@
         --purple-3: #8E95FF;
         --btn-gray: #A1A1A1;
         --green: #92C83E;
+        --border-light-purple: #e3e3ee;
 }
   
 body {
