--- a/src/app/main-content/chat/chat.component.html
+++ b/src/app/main-content/chat/chat.component.html
@@ -2,61 +2,10 @@
     <app-chat-header></app-chat-header>
 
     <div class="main-message-container">
-
-        <div class="new-message-container">
-            <img src="/img/profil-pic/002.svg" alt="">
-            <div class="message-container">
-                <div class="name">
-                    <h5>Noah Braun</h5>
-                    <p>14:25 Uhr</p>
-                </div>
-                <div class="message">Welche Version ist aktuell von Angular</div>
-                <div class="answer-container">
-                    <p class="answer">2 Anwtorten</p>
-                    <p class="answer-time">Letze Antwort 14:56</p>
-                </div>
-            </div>
-            <div class="answer-date-time-container">
-                <p>Dienstag, 14 Januar</p>
-            </div>
-        </div>
-        
-        <div class="new-message-container">
-            <img src="/img/profil-pic/002.svg" alt="">
-            <div class="message-container">
-                <div class="name">
-                    <h5>Noah Braun</h5>
-                    <p>14:25 Uhr</p>
-                </div>
-                <div class="message">Welche Version ist aktuell von Angular</div>
-                <div class="answer-container">
-                    <p class="answer">2 Anwtorten</p>
-                    <p class="answer-time">Letze Antwort 14:56</p>
-                </div>
-            </div>
-            <div class="answer-date-time-container">
-                <p>Dienstag, 14 Januar</p>
-            </div>
-        </div>
-
-        <div class="new-message-container">
-            <img src="/img/profil-pic/002.svg" alt="">
-            <div class="message-container">
-                <div class="name">
-                    <h5>Noah Braun</h5>
-                    <p>14:25 Uhr</p>
-                </div>
-                <div class="message">Welche Version ist aktuell von Angular</div>
-                <div class="answer-container">
-                    <p class="answer">2 Anwtorten</p>
-                    <p class="answer-time">Letze Antwort 14:56</p>
-                </div>
-            </div>
-            <div class="answer-date-time-container">
-                <p>Dienstag, 14 Januar</p>
-            </div>
-        </div>
-
+        <app-my-message></app-my-message>
+        <app-member-message></app-member-message>
+        <app-my-message></app-my-message>
+        <app-member-message></app-member-message>
     </div>
 
     <app-chat-message-field></app-chat-message-field>
