--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,6 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     background-color: var(--primary-bg); 
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
