--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -1,5 +1,5 @@
 <section>
-    <button class="creator-team-btn"  mat-raised-button (click)="openDialog()">
+    <button class="creator-team-btn" (click)="openDialog()">
         <mat-icon>tag</mat-icon>
         <p>Entwicklerteam</p>
         <mat-icon>keyboard_arrow_down</mat-icon>
