create message field

--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.html
@@ -1,1 +1,20 @@
-<p>chat-message-field works!</p>
+<section>
+
+    <div class="message-field-container">
+        <textarea placeholder="Naricht an #Entwicklerteam"></textarea>
+
+        <div class="message-options-container">
+
+            <div class="options-btn">
+                <button><mat-icon>add</mat-icon></button>
+                <div class="between-line"></div>
+                <button><mat-icon>sentiment_satisfied</mat-icon></button>
+                <button><mat-icon>alternate_email</mat-icon></button>
+            </div>
+
+            <button class="send-btn"><mat-icon>send</mat-icon></button>
+        </div>
+        
+    </div>
+
+</section>
