--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -1,5 +1,5 @@
 <section>
-    <button class="creator-team-btn" (click)="openDialog()">
+    <button class="creator-team-btn" (click)="openEditeChannel()">
         <mat-icon>tag</mat-icon>
         <p>Entwicklerteam</p>
         <mat-icon>keyboard_arrow_down</mat-icon>
@@ -14,7 +14,7 @@
 
         <p>3</p>
         <button>
-            <mat-icon class="material-symbols-outlined">person_add</mat-icon>
+            <mat-icon (click)="addMembersToChannel()" class="material-symbols-outlined">person_add</mat-icon>
         </button>
     </div>
 </section>
