--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -5,6 +5,8 @@ section {
     @include dFlex($ai: center, $jc: space-between);
     box-sizing: border-box;
     padding: 0 30px;
+    border-radius: 20px 20px 0 0;
+    box-shadow: 0 4px 4px -2px var(--primary-bg);
 }
 
 .creator-team-btn {
