--- a/src/app/main-content/chat/member-message/member-message.component.html
+++ b/src/app/main-content/chat/member-message/member-message.component.html
@@ -1,23 +1,19 @@
 <div class="new-message-container">
-    <img class="profile-image" src="/img/profil-pic/002.svg" alt="">
+    <img class="profile-image" src="{{message.profileImage}}" alt="">
     <div class="message-container">
         <div class="name">
-            <h5>Noah Braun</h5>
-            <p>14:25 Uhr</p>
+            <h5>{{message.name}}</h5>
+            <p>{{message.time}}</p>
         </div>
-        <div class="message">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus obcaecati iure ad ullam dolore
-                corporis quas vitae voluptatibus dolorum nihil, autem architecto est itaque dicta, deserunt aliquid sit
-                sunt mollitia?</p>
-        </div>
+        <div class="message"><p>{{message.message}}</p></div>
         <div class="reaction-container">
             <img class="add-reaction-btn" src="/img/reactions/add_reaction.svg" alt="">
-            <button><img src="/img/reactions/like.svg" alt=""><p>1</p></button>
-            <button><img src="/img/reactions/rocket.svg" alt=""></button>
+            <button><img src="/img/reactions/like.svg" alt=""><p>{{message.reactions.like.length}}</p></button>
+            <button><img src="/img/reactions/rocket.svg" alt=""><p>{{message.reactions.rocket.length}}</p></button>
         </div>
-
     </div>
+    
     <div class="answer-date-time-container">
-        <p>Heute</p>
+        <p>{{message.createdAt}}</p>
     </div>
 </div>
