--- a/src/app/main-content/chat/my-message/my-message.component.html
+++ b/src/app/main-content/chat/my-message/my-message.component.html
@@ -1,17 +1,17 @@
 <div class="new-message-container">
-    <img src="/img/profil-pic/002.svg" alt="">
+    <img src="{{message.profileImage}}" alt="">
     <div class="message-container">
         <div class="name">
-            <h5>Noah Braun</h5>
-            <p>14:25 Uhr</p>
+            <h5>{{message.name}}</h5>
+            <p>{{message.time}} Uhr</p>
         </div>
-        <div class="message">Welche Version ist aktuell von Angular</div>
+        <div class="message">{{message.message}}</div>
         <div class="answer-container">
-            <p class="answer">2 Anwtorten</p>
+            <p class="answer">{{message.answers.answer.length}} Anwtorten</p>
             <p class="answer-time">Letze Antwort 14:56</p>
         </div>
     </div>
     <div class="answer-date-time-container">
-        <p>Dienstag, 14 Januar</p>
+        <p>{{message.createdAt}}</p>
     </div>
 </div>
