--- a/src/app/main-content/chat/my-message/my-message.component.html
+++ b/src/app/main-content/chat/my-message/my-message.component.html
@@ -5,7 +5,7 @@
             <h5>{{message.name}}</h5>
             <p>{{message.time}} Uhr</p>
         </div>
-        <div class="message">{{message.message}}</div>
+        <div class="message"><p>{{message.message}}</p></div>
         <div class="answer-container">
             <p class="answer">{{message.answers.answer.length}} Anwtorten</p>
             <p class="answer-time">Letze Antwort 14:56</p>
