fonts materiel symbols

--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -1,6 +1,6 @@
 <section>
     <button class="creator-team-btn" (click)="openEditeChannel()">
-        <mat-icon>tag</mat-icon>
+        <mat-icon class="hashtag">tag</mat-icon>
         <p>Entwicklerteam</p>
         <mat-icon>keyboard_arrow_down</mat-icon>
     </button>
@@ -14,7 +14,7 @@
 
         <p>3</p>
         <button>
-            <mat-icon (click)="addMembersToChannel()" class="material-symbols-outlined">person_add</mat-icon>
+            <mat-icon (click)="addMembersToChannel()" class="add-members">person_add</mat-icon>
         </button>
     </div>
 </section>
