--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -57,3 +57,11 @@ section {
         }
     }
 }
+
+.add-members {
+    @include materialSymbols();
+}
+
+.hashtag {
+    @include materialSymbols();
+}
