--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -21,3 +21,12 @@
   font-weight: 100 1000;
   src: url('../public/fonts/Figtree-Italic-VariableFont_wght.ttf') format('truetype');
 }
+
+/* material-symbols-outlined-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Material Symbols Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../public/fonts/material-symbols-outlined-v213-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
