--- a/src/app/main-content/thread/thread-header/thread-header.component.html
+++ b/src/app/main-content/thread/thread-header/thread-header.component.html
@@ -1,1 +1,10 @@
-<p>thread-header works!</p>
+<section>
+    <div class="thread-header-container">
+        <h3>Thread</h3>
+        <mat-icon class="hashtag">tag</mat-icon>
+        <p class="thread-channel-name">Entwicklerteam</p>
+    </div>
+
+    <button><mat-icon>close</mat-icon></button>
+</section>
+
