--- a/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
+++ b/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
@@ -1,1 +1,27 @@
-<p>thread-message-field works!</p>
+<section>
+
+    <div class="message-field-container">
+        <textarea placeholder="Naricht an #Entwicklerteam"></textarea>
+
+        <div class="message-options-container">
+
+            <div class="options-btn">
+                <button [matMenuTriggerFor]="menu"><mat-icon>add</mat-icon></button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item>Item 1</button>
+                    <button mat-menu-item>Item 2</button>
+                  </mat-menu>
+                <div class="between-line"></div>
+                <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
+                <button><mat-icon>alternate_email</mat-icon></button>
+            </div>
+
+            <button class="send-btn"><mat-icon>send</mat-icon></button>
+        </div>
+
+        <div class="emojis-container" *ngIf="openEmojis">
+            <emoji-mart title="Pick your emoji…" emoji="point_up"></emoji-mart>
+        </div>
+    </div>
+
+</section>
