--- a/src/app/shared/header/main-header.component.html
+++ b/src/app/shared/header/main-header.component.html
@@ -1,7 +1,7 @@
 <div class="headerComponent" >
     <div class="headerMainWrapper">
         <div class="headerContentWrapper">
-            <div class="logo"><img src="./img/main-assets/main-logo.svg"></div>
+            <div class="logo"><img [src]="darkmode.isDarkMode() ? './img/main-assets/main-logo-dark.svg' : './img/main-assets/main-logo.svg'"></div>
             <app-searchbar></app-searchbar>
             <app-profile-navigation></app-profile-navigation>
         </div>
