responsiv header component

--- a/src/app/shared/header/main-header.component.html
+++ b/src/app/shared/header/main-header.component.html
@@ -2,8 +2,9 @@
     <div class="headerMainWrapper">
         <div class="headerContentWrapper">
             <div class="logo"><img [src]="darkmode.isDarkMode() ? './img/main-assets/main-logo-dark.svg' : './img/main-assets/main-logo.svg'"></div>
-            <app-searchbar></app-searchbar>
+            <app-searchbar class="nonMobilSearchbar"></app-searchbar>
             <app-profile-navigation></app-profile-navigation>
         </div>
     </div>
+
 </div>
