--- a/src/app/shared/header/main-header.component.scss
+++ b/src/app/shared/header/main-header.component.scss
@@ -2,7 +2,16 @@
 
 .headerComponent{
     @include dFlex;
-    height: 15vh   
+    height: 15vh;
+
+    @include respond-to-maxWidth(large) {
+        z-index: 99;
+        width: 100%;
+        height: 80px;
+        position: fixed; 
+        top: 0px;
+        background-color: var(--primary-bg);
+    }
 }
 
 .headerMainWrapper{
@@ -14,14 +23,33 @@
 .headerContentWrapper{
     width: 100%;
     @include dFlex($jc: space-between);
-    
+    @include respond-to-maxWidth(large) {
+        gap: 5%;
+    }
 }
 
 .logo{
-    @include heightWidth;
-    max-width: 243px;
+    width: 100%;
+    max-width: 256px;
+    object-fit: cover;
+    @include respond-to-maxWidth(large) {
+        @include  heightWidth($w: auto, $h: 100%);
+        max-width: auto;
+        max-height: 50px;
+    }
+
     img{
-      @include image();
+        @include  heightWidth($w: 100%, $h: auto);
+        @include image;
+        display: flex;
+        align-items: center;
+        max-width: 306px;
+
+        @include respond-to-maxWidth(large) {
+            @include  heightWidth($w: auto, $h: 100%);
+            max-width: auto;
+            max-height: 45px;
+        }
     }
 
     &:hover{
@@ -32,6 +60,5 @@
 app-searchbar {
 width: 50%;
 }
-
 
 
