--- a/src/app/shared/header/profile-navigation/profile-navigation.component.scss
+++ b/src/app/shared/header/profile-navigation/profile-navigation.component.scss
@@ -8,11 +8,37 @@
         @include figtree($fw: 500, $fs: 24px, $c: var(--text-black));
         text-wrap: nowrap;
         padding-right: 24px;
+
+        @include respond-to-maxWidth(large) {
+            display: none;
+        }
     }
 
     .profilButton{
         width: 100%;
         padding: 0px 16px;
+
+        @include respond-to-maxWidth(large) {
+            padding: 0px 0px;
+        }
+
+        img{
+            display: flex;
+            align-items: center;
+            @include  image($br: 0);
+            @include  heightWidth($w: 70px, $h: 70px);
+            border-radius: 50%;
+            border: 5px solid transparent;
+
+            @include respond-to-maxWidth(large) {
+                @include  heightWidth($w: 50px, $h: 50px);
+            }
+
+            &:hover{
+                cursor: pointer;
+                border: 5px solid var(--purple-2);
+            }
+        }
     }
 
     mat-icon{
@@ -23,6 +49,9 @@
 .profilPicture{
    @include heightWidth($w: 70px, $h: 70px);
     position: relative;
+    @include respond-to-maxWidth(large) {
+        display: none;
+    }
 
 
     img{
