--- a/src/app/shared/header/profile-navigation/profile-navigation.component.scss
+++ b/src/app/shared/header/profile-navigation/profile-navigation.component.scss
@@ -36,7 +36,7 @@
 
             &:hover{
                 cursor: pointer;
-                border: 5px solid var(--purple-2);
+                border: 5px solid var(--green);
             }
         }
     }
