--- a/src/app/shared/header/main-header.component.scss
+++ b/src/app/shared/header/main-header.component.scss
@@ -44,6 +44,7 @@
     }
 
     .mat-mdc-menu-content {
+        padding-bottom: 36px;
         border-radius: 36px 0px 36px 36px;
         background-color: var( --secundary-bg);
         @include dFlex;
