--- a/src/app/main-content/chat/chat.component.html
+++ b/src/app/main-content/chat/chat.component.html
@@ -1,12 +1,12 @@
 <section>
     <app-chat-header></app-chat-header>
 
-    <div class="main-message-container">
-        <div *ngFor="let msg of messages">
-            <app-my-message *ngIf="msg.user === 'myself'" [message]="msg"></app-my-message>
-            <app-member-message *ngIf="msg.user === 'member'" [message]="msg"></app-member-message>
-          </div>
+    <div class="main-message-container"  #messageContainer>
+        <div *ngFor="let msg of message; index as i">
+            <app-my-message *ngIf="msg.user === currentUserId" [message]="msg" (delete)="deleteMessage(i)"></app-my-message>
+            <app-member-message *ngIf="msg.user !== currentUserId" [message]="msg"></app-member-message>
+        </div>
     </div>
 
-    <app-chat-message-field></app-chat-message-field>
+    <app-chat-message-field (messagesUpdated)="onMessagesUpdated()"></app-chat-message-field>
 </section>
