--- a/src/app/main-content/chat/my-message/my-message.component.html
+++ b/src/app/main-content/chat/my-message/my-message.component.html
@@ -1,17 +1,45 @@
 <div class="new-message-container">
-    <img src="{{message.profileImage}}" alt="">
-    <div class="message-container">
-        <div class="name">
-            <h5>{{message.name}}</h5>
-            <p>{{message.time}} Uhr</p>
+    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()">
+        <img class="profile-image" src="{{message.profileImage}}" alt="">
+
+        <div class="message-container">
+
+            <div class="name">
+                <h5>{{message.name}}</h5>
+                <p>{{message.time}}</p>
+            </div>
+
+            <div class="message">
+                <p>{{message.message}}</p>
+            </div>
+
+            <div class="reaction-container">
+                <img class="add-reaction-btn" src="/img/reactions/add_reaction.svg" alt="">
+                <button><img src="/img/reactions/like.svg" alt="">
+                    <p>{{message.reactions.like.length}}</p>
+                </button>
+                <button><img src="/img/reactions/rocket.svg" alt="">
+                    <p>{{message.reactions.rocket.length}}</p>
+                </button>
+            </div>
+
         </div>
-        <div class="message"><p>{{message.message}}</p></div>
-        <div class="answer-container">
-            <p class="answer">{{message.answers.answer.length}} Anwtorten</p>
-            <p class="answer-time">Letze Antwort 14:56</p>
+
+        <div class="answer-date-time-container">
+            <p>{{message.createdAt}}</p>
         </div>
-    </div>
-    <div class="answer-date-time-container">
-        <p>{{message.createdAt}}</p>
+
+        <div class="options" *ngIf="isMessageHover">
+            <button class="options-btn"><img src="/img/reactions/rocket.svg" alt=""></button>
+            <button class="options-btn"><mat-icon><img src="/img/reactions/like.svg" alt=""></mat-icon></button>
+            <button class="options-btn"><mat-icon>sentiment_satisfied</mat-icon></button>
+            <button class="options-btn"><mat-icon>comment</mat-icon></button>
+            <button class="options-btn" (click)="openEditMenu()"><mat-icon>more_vert</mat-icon></button>
+
+            <div class="edit-message-menu" *ngIf="isMessageEditMenuOpen">
+              <button>Bearbeiten</button>
+              <button (click)="deleteMessage()">Löschen</button>
+            </div>
+        </div>
     </div>
 </div>
