--- a/src/app/main-content/chat/member-message/member-message.component.scss
+++ b/src/app/main-content/chat/member-message/member-message.component.scss
@@ -1,26 +1,24 @@
 @import '../../../../mixin.scss';
 
 .new-message-container {
-    @include dFlex($ai: start, $jc: end);
-    flex-direction: row-reverse;
+    @include dFlex($ai: start, $jc: start);
     box-sizing: border-box;
-    padding: 50px 10px;
+    padding: 40px 0px;
     position: relative;
     border-top: 1px solid var(--border-light-purple);
 
-    .profile-image {
+    img {
         @include image($br: 50%);
         @include heightWidth($w: auto, $h: 60px);
-        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .name {
-        @include dFlex($jc: end);
-        flex-direction: row-reverse;
+        @include dFlex($jc: start);
 
         h5 {
             @include nunito($fw: 700, $fs: 18px);
-            margin-left: 20px;
+            margin-right: 20px;
         }
 
         p {
@@ -29,42 +27,27 @@
     }
 
     .message {
-        background-color: var(--purple-2);
+        background-color: var(--primary-bg);
         box-sizing: border-box;
         padding: 10px;
-        border-radius: 20px 0px 20px 20px;
+        border-radius: 0 20px 20px 20px;
         margin: 10px 0;
 
         p {
-            @include nunito($fw: 400, $fs: 18px, $c: var(--secundary-bg));
+            @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
         }
     }
 
-    .reaction-container {
-        @include dFlex($jc: end);
-        flex-direction: row-reverse;
+    .answer-container {
+        @include dFlex($jc: start);
 
-        button {
-            @include dFlex();
-            border: none;
-            border: 1px solid var(--purple-2);
-            border-radius: 20px;
-            padding: 5px 10px;
-            background-color: var(--secundary-bg);
-            margin-left: 10px;
-
-            img {
-                height: 100%
-            }
-
-            p {
-            @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
-            margin-left: 10px;
-            }
+        .answer {
+            @include nunito($fw: 400, $fs: 18px, $c: var(--purple-3));
+            margin-right: 20px;
         }
 
-        .add-reaction-btn {
-            margin-left: 10px;
+        .answer-time {
+            @include nunito($fw: 400, $fs: 14px, $c: var(--text-gray));
         }
     }
 
@@ -81,6 +64,56 @@
 
         p {
             @include nunito($fw: 400, $fs: 18px, $c: var(--text-black));
+        }
+    }
+
+}
+
+.hover {
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px 30px;
+
+    &:hover {
+        background-color: var(--primary-bg);
+    }
+}
+
+.options {
+    background-color: white;
+    box-sizing: border-box;
+    padding: 0px 10px;
+    position: absolute;
+    right: 50px;
+    top: 25px;
+    border-radius: 20px 20px 20px 0px;
+    border: 2px solid var(--border-light-purple);
+    @include dFlex();
+
+
+
+
+    .options-btn {
+        border: none;
+        margin-right: 5px;
+        margin-left: 5px;
+        border-radius: 50%;
+        height: 40px;
+        width: 40px;
+        background-color: white;
+        cursor: pointer;
+
+        
+
+        img {
+            height: 100%;
+            width: 100%;
+
+        }
+
+        &:hover {
+            background-color: var(--border-light-purple);
         }
     }
 
