--- a/src/app/main-content/thread/thread-my-message/thread-my-message.component.html
+++ b/src/app/main-content/thread/thread-my-message/thread-my-message.component.html
@@ -1,15 +1,15 @@
 <div class="new-message-container">
-    <img src="{{message.profileImage}}" alt="">
+    <img class="profile-image" src="{{message.profileImage}}" alt="">
     <div class="message-container">
         <div class="name">
             <h5>{{message.name}}</h5>
-            <p>{{message.time}} Uhr</p>
+            <p>{{message.time}}</p>
         </div>
         <div class="message"><p>{{message.message}}</p></div>
+        <div class="reaction-container">
+            <img class="add-reaction-btn" src="/img/reactions/add_reaction.svg" alt="">
+            <button><img src="/img/reactions/like.svg" alt=""><p>{{message.reactions.like.length}}</p></button>
+            <button><img src="/img/reactions/rocket.svg" alt=""><p>{{message.reactions.rocket.length}}</p></button>
+        </div>
     </div>
-
-    <div class="answer-date-time-container">
-        <p>2 Antworten</p>
-    </div>
-
 </div>
