--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
     --primary-bg: #ECEEFE;
         --secundary-bg: #FFFFFF;
         --text-black: #000000;
+        --text-light-black: #0c0c0c;
         --text-gray: #686868;
         --text-blue: #1381FF;
         --text-red: #ED1E79;
@@ -19,6 +20,7 @@
     --primary-bg: #1E1E2E;
         --secundary-bg: #2A2A3B;
         --text-black: #FFFFFF;
+        --text-light-black: #f1f1f1;
         --text-gray: #A1A1A1;
         --text-blue: #339BFF;
         --text-red: #FF5C8D;
