--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -1,7 +1,233 @@
 @import '../../../mixin.scss';
 
-section {
+.serverNav {
     @include heightWidth($w: 100%, $h: 100%);
-    background-color: rgba(0, 0, 255, 0.164);
+    background-color: var(--secundary-bg);
+    border-radius: 30px;
+    font-family: 'Nunito';
+}
+
+.serverNavContent{
+    background-color: var(--secundary-bg) ;
+    @include padding(32px, 30px 32px, 30px);
+    overflow: hidden ;
+    border-radius: 30px;
+    color: var(--text-black) ;
+}
+
+.toggleNavBarButton{
+    position: fixed;
+    transform: translateY(-30%);
+    left: 0px;
+    bottom:5vh;
+    z-index: 10;
+    transform: rotate(90deg) scaleX(-1) scaleY(-1);
+    transform-origin: left top;
+    padding: 18px 26px 18px 26px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    font-family: 'Nunito';
+    font-size: 20px;
+    background-color: var(--secundary-bg);
+    box-shadow: -4px 4px 7px 0px #00000033;
+    border: 0px;
+    outline: none;
+    color: var(--text-black);
+    font-weight: 500;
+    display: flex;
+    gap: 10px;
+    transition: color 0.125s ease-in-out;
+    align-items: center;
+    box-sizing: border-box;
+
+
+    svg{
+        transition: color 0.125s ease-in-out;
+        path, rect{
+        stroke: var(--text-black);
+        transition: color 0.125s ease-in-out;
+        }
+    }
+
+    &:hover {
+        cursor: pointer;
+        color: var(--purple-2);
+        svg{
+            path, rect{
+            stroke: var(--purple-2);
+            }
+        }
+    }
+}
+
+.titleRow{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.titleAndServerSvg{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+h2{
+    font-size: 24px ;
+    margin: 0px ;
+    font-weight: 700;
+    font-family: 'Nunito';
+}
+
+h3{
+    margin: 0px ;
+    font-size: 20px ;
+}
+
+.mat-drawer-inner-container{
+    overflow: visible;
+}
+
+.writeMessageButton, 
+.addChannelPlus {
+        outline: none;
+        border: 0px;
+        background-color: transparent;
+        border-radius: 30px;
+        @include dFlex(center, center);
+    svg{
+        stroke: var(--text-light-black);
+        stroke-width: 0.1px;
+    }
+    transition: background-color 0.125s ease-in-out;
+    path{
+        fill: var(--text-light-black);
+        stroke-width: 0.1px;
+    }
+    &:hover {
+        cursor: pointer;
+        background-color: var(--primary-bg);
+        svg, path{
+            stroke: var(--purple-3);
+            path{
+                fill: var(--purple-3);
+            }
+        }
+    }
+    &:active {
+        background-color: var(--purple-2);
+    }
+}
+
+.addChannelPlus{
+    padding: 10px;
+    box-sizing: border-box;
+    path{
+        stroke-width: 0.1px;
+    }
+}
+
+.dropDownArrow{
+    margin-right: 15px;
+    padding: 10px;
+    transform: rotate(-90deg);
+}
+
+.dropwDownTopRow{
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+    justify-content: space-between;
+    &:hover{
+        cursor: pointer;
+        .dFlex{
+            color: var(--purple-1);
+        }
+        svg{
+            path{
+                fill: var(--purple-1);
+            }
+        }
+    }
+}
+
+.folderTitle{
+    margin-left: 10px;
+    font-weight: 500;
+}
+
+.dFlex{
+    display: flex;
+    align-items: center;
+}
+
+.addChannelButton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 25px;
+}
+
+.channel, .contact{
+    margin-bottom: 25px;
+    margin-left: 25px;
+    transition:  background-color 0.125s ease-in-out;
     border-radius: 20px;
+    padding: 4px 20px 4px 20px;
+    width: fit-content;
+    font-family: 'Nunito';
+    font-weight: 500;
+    font-size: 18px;
+
+    &:hover{
+        background-color: var(--primary-bg);
+        color: var(--purple-1);
+        cursor: pointer;
+    }
+}
+
+.contact{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    margin-bottom: 13px;    
+    padding: 4px, 20px, 4px, 20px;
+    font-size: 18px;
+    border-radius: 60px;
+}
+
+.addChannelButton{
+    color: var(--text-black);
+    display: flex;
+    gap: 10px;
+    transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
+    &:hover{
+        color: var(--purple-1);
+        cursor: pointer;
+        .material-icons{
+            transform: scale(1.1);
+        }
+    }
+}
+
+.rotateArrow{
+    transform: rotate(0deg);
+}
+
+::ng-deep .mat-drawer-inner-container {
+    overflow: visible!important;
+}
+
+.contactPicture{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.onlineStatus{
+    position: absolute;
+    right: 0px;
+    bottom: 6px;
 }
