--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -7,7 +7,8 @@
 }
 
 app-devspace {
-    @include heightWidth($w: 20%);
+    max-width: 20%;
+    height: 100%;
 }
 
 app-chat {
@@ -17,5 +18,6 @@ app-chat {
 }
 
 app-thread {
-    @include heightWidth($w: 25%);
+    max-width: 25%;
+    height: 100%;
 }
