--- a/src/app/main-content/chat/my-message/my-message.component.scss
+++ b/src/app/main-content/chat/my-message/my-message.component.scss
@@ -111,13 +111,11 @@
 
 
     .options-btn {
+        @include heightWidth($w: 40px, $h: 40px);
         border: none;
-        margin-right: 5px;
-        margin-left: 5px;
+        margin: 0 5px;
         text-align: center;
         border-radius: 50%;
-        height: 40px;
-        width: 40px;
         background-color: white;
         cursor: pointer;
 
@@ -133,11 +131,11 @@
 }
 
 .edit-message-menu {
+    @include dFlex($ai: start);
     background-color: white;
     position: absolute;
     bottom: -79px;
     right: -2px;
-    @include dFlex($ai: start);
     flex-direction: column;
     border-radius: 0px 0px 0px 10px;
     box-sizing: border-box;
