--- a/src/app/main-content/login/login-animation/login-animation.component.html
+++ b/src/app/main-content/login/login-animation/login-animation.component.html
@@ -1,1 +1,9 @@
-<p>login-animation works!</p>
+<section class="background">
+    <div class="Content-Wrapper">
+        <div class="animation-Container">
+
+        <div class="logo"><img src="./img/main-assets/logo-solo.png"></div><div class="mask"><div class="DABubbleFont">DABubble</div></div>
+
+        </div>
+    </div>
+</section>
