--- a/src/app/main-content/login/login-animation/login-animation.component.html
+++ b/src/app/main-content/login/login-animation/login-animation.component.html
@@ -2,7 +2,11 @@
     <div class="Content-Wrapper">
         <div class="animation-Container">
 
-        <div class="logo"><img src="./img/main-assets/logo-solo.png"></div><div class="mask"><div class="DABubbleFont">DABubble</div></div>
+        <div class="logo"><img src="./img/main-assets/logo-solo.png"></div>
+        
+        <div class="mask">
+            <div class="DABubbleFont">DABubble</div>
+        </div>
 
         </div>
     </div>
