--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -1,2 +1,11 @@
+
+
 <app-login-animation></app-login-animation>
-<button routerLink="/start">Guest -></button>
+<app-login-animation-inside></app-login-animation-inside>
+
+
+<section class="MainWrapper">
+
+    <button routerLink="/start">Guest -></button>
+
+</section>
